--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -3,6 +3,11 @@
 
 # custom rules
 #
+category:
+  url:      /category/:slug
+  class:    sfDoctrineRoute
+  param:    { module: category, action: show }
+  options:  { model: JobeetCategory, type: object }
 job:
   class:   sfDoctrineRouteCollection
   options: { model: JobeetJob }
