Added token requirement for routes related to the jobs

--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -11,6 +11,7 @@ category:
 job:
   class:   sfDoctrineRouteCollection
   options: { model: JobeetJob }
+  requirements: { token: \w+ }
  
 job_show_user:
   url:     /job/:company_slug/:location_slug/:id/:position_slug
