--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -8,10 +8,15 @@ category:
   class:    sfDoctrineRoute
   param:    { module: category, action: show }
   options:  { model: JobeetCategory, type: object }
+
 job:
   class:   sfDoctrineRouteCollection
-  options: { model: JobeetJob }
-  requirements: { token: \w+ }
+  options:
+    model:          JobeetJob
+    column:         token
+    object_actions: { publish: put }
+  requirements:
+    token: \w+
  
 job_show_user:
   url:     /job/:company_slug/:location_slug/:id/:position_slug
