--- a/apps/backend/modules/category/config/generator.yml
+++ b/apps/backend/modules/category/config/generator.yml
@@ -16,6 +16,7 @@ generator:
       fields:  ~
       list:    
         title: Category Management
+        display: [=name, slug]
       filter:  ~
       form:    ~
       edit:    
