--- a/apps/backend/modules/job/config/generator.yml
+++ b/apps/backend/modules/job/config/generator.yml
@@ -21,7 +21,7 @@ generator:
         layout: stacked
         display: [company, position, location, url, is_activated, email]
         params:  |
-              %%is_activated%% <small>%%category_id%%</small> - %%company%%
+              %%is_activated%% <small>%%jobeet_category%%</small> - %%company%%
                      (<em>%%email%%</em>) is looking for a %%=position%% (%%location%%)
       filter:  ~
       form:    ~
