--- a/apps/backend/modules/category/config/generator.yml
+++ b/apps/backend/modules/category/config/generator.yml
@@ -15,6 +15,7 @@ generator:
       actions: ~
       fields:  ~
       list:    
+        object_actions: {}
         title: Category Management
         display: [=name, slug]
       filter:  ~
