--- a/apps/backend/modules/job/config/generator.yml
+++ b/apps/backend/modules/job/config/generator.yml
@@ -17,6 +17,7 @@ generator:
         is_activated: { label: Activated?, help: Whether the user has activated the job, or not }
         is_public:    { label: Public?, help: Whether the job can also be published on affiliate websites, or not }
       list:    
+        table_method: retrieveBackendJobList
         actions: 
           deleteNeverActivated: { label: Delete never activated jobs }
         object_actions:
