--- a/apps/backend/modules/job/config/generator.yml
+++ b/apps/backend/modules/job/config/generator.yml
@@ -36,7 +36,10 @@ generator:
               %%is_activated%% <small>%%jobeet_category%%</small> - %%company%%
                      (<em>%%email%%</em>) is looking for a %%=position%% (%%location%%)
       filter:  ~
-      form:    ~
+      form:    
+        display:
+          Content: [category_id, type, company, logo, url, position, location, description, how_to_apply, is_public, email]
+          Admin:   [_generated_token, is_activated, expires_at]
       edit:    
         title: Editing Job "%%company%% is looking for a %%position%%"
       new:     
