--- a/apps/backend/modules/job/config/generator.yml
+++ b/apps/backend/modules/job/config/generator.yml
@@ -37,6 +37,7 @@ generator:
                      (<em>%%email%%</em>) is looking for a %%=position%% (%%location%%)
       filter:  ~
       form:    
+        class: BackendJobeetJobForm
         display:
           Content: [category_id, type, company, logo, url, position, location, description, how_to_apply, is_public, email]
           Admin:   [_generated_token, is_activated, expires_at]
