Finished Jobeet backend configuration

--- a/apps/backend/modules/category/config/generator.yml
+++ b/apps/backend/modules/category/config/generator.yml
@@ -1,5 +1,4 @@
-generator:
-  class: sfDoctrineGenerator
+class: sfDoctrineGenerator
   param:
     model_class:           JobeetCategory
     theme:                 admin
@@ -9,18 +8,23 @@ generator:
     plural:                ~
     route_prefix:          jobeet_category
     with_doctrine_route:   true
-    actions_base_class:    sfActions
-
+ 
     config:
       actions: ~
       fields:  ~
-      list:    
-        object_actions: {}
-        title: Category Management
+      list:
+        title:   Category Management
         display: [=name, slug]
-      filter:  ~
-      form:    ~
-      edit:    
+        batch_actions: {}
+        object_actions: {}
+      filter:
+        class: false
+      form:
+        actions:
+          _delete: ~
+          _list:   ~
+          _save:   ~
+      edit:
         title: Editing Category "%%name%%"
-      new:     
+      new:
         title: New Category
