Changed the default action used for the login page

--- a/apps/backend/config/settings.yml
+++ b/apps/backend/config/settings.yml
@@ -24,8 +24,13 @@ test:
 
 all:
   .settings:
+    enabled_modules: [default, sfGuardAuth]
     # Form security secret (CSRF protection)
     csrf_secret:            8a719003e2b878a57d5d8734c614fc7b92ad7458
+
+  .actions:
+    login_module: sfGuardAuth
+    login_action: signin
 
     # Output escaping settings
     escaping_strategy:      true
