Added support to manage administrator users

--- a/apps/backend/config/settings.yml
+++ b/apps/backend/config/settings.yml
@@ -24,7 +24,7 @@ test:
 
 all:
   .settings:
-    enabled_modules: [default, sfGuardAuth]
+    enabled_modules: [default, sfGuardAuth, sfGuardUser]
     # Form security secret (CSRF protection)
     csrf_secret:            8a719003e2b878a57d5d8734c614fc7b92ad7458
 
